Aggiornato il contenuto e la struttura di accessibility.html per migliorare l'accessibilità e la chiarezza, inclusa la modifica dei meta tag e la ristrutturazione delle sezioni informative.

--- a/accessibility.html
+++ b/accessibility.html
@@ -26,10 +26,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <head>
         <title>Genialabile | Accessibility</title>
         <meta name="description" content="Genialabile - Accessibility Front Statement.">
-        <!-- Meta Page -->
-        <meta name="keywords" content="Genialabile, Accessibility Page. ADA, CCPA, WCAG, Screen Reader, Keyboard Navigation">
+        <!-- Meta tags for search engines -->
+        <meta name="keywords" content="Genialabile, Accessibility Page, ADA, CCPA, WCAG, Screen Reader, Keyboard Navigation">
         <link rel="canonical" href="https://genialabile.com/accessibility.html">
-       
+
         <!-- Fetching header dynamically -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -49,79 +49,87 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     ACCESSIBILITY STATEMENT
                 </a>
             </h1>
+
             <div class="imp-l">
-                <p>
-                    <h3><br>
-                        🎗️ Welcome
-                    </h3>
+                <section>
+                    <h2>🎗️ Welcome</h2>
                     <hr class="thin-line">
-                        Genialabile is committed to providing a website that is accessible to all users, including individuals with disabilities.
-                        We strive to ensure our platform meets or exceeds the requirements of applicable laws.
-                        Including the California Consumer Privacy Act (CCPA) and the Americans with Disabilities Act (ADA).
-                </p>
-                <p>
-                    <h3><br>
-                        🔬 Features supporting accessibility
-                    </h3>
+                    <p>
+                        Genialabile is committed to providing a website that is accessible to all users, including individuals with disabilities. 
+                        We strive to ensure our platform meets or exceeds the requirements of applicable laws, 
+                        including the California Consumer Privacy Act (CCPA) and the Americans with Disabilities Act (ADA).
+                    </p>
+                </section>
+
+                <section>
+                    <h2>🔬 Features supporting accessibility</h2>
                     <hr class="thin-line">
-                    We have implemented the following features to enhance accessibility:
-                    <br><br>
-                    # Screen reader compatibility for visually impaired users.
-                    <br><br>
-                    # Text scaling support for users with visual difficulties.
-                    <br><br>
-                    # High contrast design for better readability.
-                    <br><br>
-                    # Color contrast adjustments for better readability.
-                    <br>
-                    All contrast ratios for text, links, and interactive elements meet or exceed WCAG AA and AAA compliance levels, ensuring a wide range of usability for buttons, titles, and body text.
-                    <br><br>
-                    # Keyboard navigation compatibility for users without a mouse.  
-                    <br>
-                    The website is fully navigable using keyboard shortcuts, ensuring accessibility for users with limited mobility or those relying on alternative navigation tools.
-                </p>
-                <p>
-                    <h3><br>
-                        🚜 Tools and limitations
-                    </h3>
+                    <p>
+                        We have implemented the following features to enhance accessibility:
+                    </p>
+                    <ul>
+                        <li>Screen reader compatibility for visually impaired users.</li>
+                        <li>Text scaling support for users with visual difficulties.</li>
+                        <li>High contrast design for better readability.</li>
+                        <li>Color contrast adjustments for better readability.</li>
+                        <li>
+                            All contrast ratios for text, links, and interactive elements meet or exceed 
+                            WCAG AA and AAA compliance levels, ensuring a wide range of usability for buttons, titles, and body text.
+                        </li>
+                        <li>
+                            Keyboard navigation compatibility for users without a mouse. The website is fully navigable 
+                            using keyboard shortcuts, ensuring accessibility for users with limited mobility or those relying 
+                            on alternative navigation tools.
+                        </li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h2>🚜 Tools and limitations</h2>
                     <hr class="thin-line">
-                        We are working to ensure these services are accessible but cannot guarantee full compliance, with the best efforts as possible.
-                        Taking care for every user, we are committed to providing a platform that is accessible to all.
-                </p>
-                <p>
-                    <h3><br>
-                        🎙️ Continuous improvements
-                    </h3>
+                    <p>
+                        We are working to ensure these services are accessible but cannot guarantee full compliance. 
+                        With our best efforts, we are committed to providing a platform that is accessible to all.
+                    </p>
+                </section>
+
+                <section>
+                    <h2>🎙️ Continuous improvements</h2>
                     <hr class="thin-line">
-                    Genialabile continuously monitors accessibility standards and makes updates where necessary.
-                    Your feedback is invaluable to us. If you have suggestions or notice issues, feel free to contact us.
-                </p>
-                <p>
-                    <h3><br>
-                        📮 How to request assistance
-                    </h3> 
+                    <p>
+                        Genialabile continuously monitors accessibility standards and makes updates where necessary.
+                        Your feedback is invaluable to us. If you have suggestions or notice issues, feel free to contact us.
+                    </p>
+                </section>
+
+                <section>
+                    <h2>📮 How to request assistance</h2>
                     <hr class="thin-line">
-                        Gen:
+                    <p>
+                        Gen: 
                         <a href="mailto:info@genialabile.com?subject=Contact%20Request"
                         aria-label="Email Genialabile at info@genialabile.com">
-                        info@genialabile.com</a>
+                            info@genialabile.com
+                        </a> 
                         <i>(limited uptime)</i>
-                        <br><br>
-                        Gmail:
+                    </p>
+                    <p>
+                        Gmail: 
                         <a href="mailto:genialabile@gmail.com?subject=Contact%20Request"
                         aria-label="Email Genialabile at genialabile@gmail.com">
                             genialabile@gmail.com
                         </a>
-                </p>
+                    </p>
+                </section>
             </div>
-            <br>
+
             <p class="txt-mini">
                 * * *
                 <br>
                 Last Updated: 16 January 2025
             </p>
         </main>
-        
+
         <!-- Preloader -->
         <div id="preloader"></div>
 
