Ristrutturato accessibility.html: semplificato il contenuto, migliorata la chiarezza e aggiornati i titoli delle sezioni per una migliore accessibilità.

--- a/accessibility.html
+++ b/accessibility.html
@@ -46,11 +46,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <h1>
                 <a href="https://genialabile.com/accessibility"
                 aria-label="Visit Genialabile Accessibility Statement Page">
-                    ACCESSIBILITY STATEMENT
-                </a>
+                    ACCESSIBILITY</a>
             </h1>
 
-            <div class="imp-l">
+            <!-- Spacer Divider -->
+            <div class="divider-with-padding"></div>
+
+            <div class="imp">
                 <section>
                     <h2>🎗️ Welcome</h2>
                     <hr class="thin-line">
@@ -62,30 +64,28 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </section>
 
                 <section>
-                    <h2>🔬 Features supporting accessibility</h2>
+                    <h2>🔬 Features</h2>
                     <hr class="thin-line">
                     <p>
                         We have implemented the following features to enhance accessibility:
+                        <br><br>
+                        <b>#</b> Screen reader compatibility for visually impaired users.
+                        <br><br>
+                        <b>#</b> Text scaling support for users with visual difficulties.
+                        <br><br>
+                        <b>#</b> High contrast design for better readability.
+                        <br><br>
+                        <b>#</b> Color contrast adjustments for better readability.
+                        <br><br> 
+                        <b>#</b> All contrast ratios for text, links, and interactive elements meet or exceed WCAG AA and AAA compliance levels, ensuring a wide range of usability for buttons, titles, and body text.
+                        <br><br> 
+                        <b>#</b> Keyboard navigation compatibility for users without a mouse. The website is fully navigable using keyboard shortcuts, ensuring accessibility for users with limited mobility or those relying on alternative navigation tools.
                     </p>
-                    <ul>
-                        <li>Screen reader compatibility for visually impaired users.</li>
-                        <li>Text scaling support for users with visual difficulties.</li>
-                        <li>High contrast design for better readability.</li>
-                        <li>Color contrast adjustments for better readability.</li>
-                        <li>
-                            All contrast ratios for text, links, and interactive elements meet or exceed 
-                            WCAG AA and AAA compliance levels, ensuring a wide range of usability for buttons, titles, and body text.
-                        </li>
-                        <li>
-                            Keyboard navigation compatibility for users without a mouse. The website is fully navigable 
-                            using keyboard shortcuts, ensuring accessibility for users with limited mobility or those relying 
-                            on alternative navigation tools.
-                        </li>
                     </ul>
                 </section>
 
                 <section>
-                    <h2>🚜 Tools and limitations</h2>
+                    <h2>🚜 Tools & Limitations</h2>
                     <hr class="thin-line">
                     <p>
                         We are working to ensure these services are accessible but cannot guarantee full compliance. 
@@ -94,7 +94,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </section>
 
                 <section>
-                    <h2>🎙️ Continuous improvements</h2>
+                    <h2>🎙️ Improvements</h2>
                     <hr class="thin-line">
                     <p>
                         Genialabile continuously monitors accessibility standards and makes updates where necessary.
@@ -103,30 +103,32 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </section>
 
                 <section>
-                    <h2>📮 How to request assistance</h2>
+                    <h2>📮 Assistance</h2>
                     <hr class="thin-line">
                     <p>
-                        Gen: 
+                        Email: 
                         <a href="mailto:info@genialabile.com?subject=Contact%20Request"
                         aria-label="Email Genialabile at info@genialabile.com">
                             info@genialabile.com
                         </a> 
                         <i>(limited uptime)</i>
                     </p>
-                    <p>
-                        Gmail: 
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request"
-                        aria-label="Email Genialabile at genialabile@gmail.com">
-                            genialabile@gmail.com
-                        </a>
-                    </p>
+                    <!--
+                        <p>
+                            Gmail: 
+                            <a href="mailto:genialabile@gmail.com?subject=Contact%20Request"
+                            aria-label="Email Genialabile at genialabile@gmail.com">
+                                genialabile@gmail.com
+                            </a>
+                        </p>
+                    -->
                 </section>
             </div>
 
             <p class="txt-mini">
                 * * *
                 <br>
-                Last Updated: 16 January 2025
+                Last Updated: 20 January 2025
             </p>
         </main>
 
