--- a/accessibility.html
+++ b/accessibility.html
@@ -85,7 +85,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </section>
 
                 <section>
-                    <h2>🚜 Tools & Limitations</h2>
+                    <h2>🚜 Limitations</h2>
                     <hr class="thin-line">
                     <p>
                         We are working to ensure these services are accessible but cannot guarantee full compliance. 
