Ristrutturato accessibility.html, cli.html, footer.html e main.css: aggiornati i link, migliorata la struttura e la chiarezza del contenuto, rimosso codice obsoleto e semplificati i meta tag.

--- a/accessibility.html
+++ b/accessibility.html
@@ -52,7 +52,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <!-- Spacer Divider -->
             <div class="divider-with-padding"></div>
 
-            <div class="imp">
+            <div id="imp-links">
                 <section>
                     <h2>🎗️ Welcome</h2>
                     <hr class="thin-line">
@@ -62,6 +62,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         including the California Consumer Privacy Act (CCPA) and the Americans with Disabilities Act (ADA).
                     </p>
                 </section>
+
+                <section></section>
 
                 <section>
                     <h2>🔬 Features</h2>
@@ -83,6 +85,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </p>
                     </ul>
                 </section>
+
+                <section></section>
 
                 <section>
                     <h2>🚜 Limitations</h2>
@@ -107,11 +111,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                     <p>
                         Email: 
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request"
+                        <a href="mailto:info@genialabile.com?subject=Accesiibility%20Request"
                         aria-label="Email Genialabile at info@genialabile.com">
-                            info@genialabile.com
-                        </a> 
-                        <i>(limited uptime)</i>
+                        info@genialabile.com</a>
+                        <!-- <i>(limited uptime)</i> -->
                     </p>
                     <!--
                         <p>
