--- a/footer.html
+++ b/footer.html
@@ -29,27 +29,31 @@ Use, distribution, or modification of this project is strictly prohibited withou
     ◉</a>
     |
     -->
-    <a href="https://genialabile.com/cli" class="imp-p"
+    <a href="https://genialabile.com/"
+    aria-label="Genialabile Home Page" title="Genialabile Home Page">
+    HP</a>
+    |
+    <a href="https://genialabile.com/cli"
     aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
     CLI</a>
     |
-    <a href="https://genialabile.com/contacts" class="imp-p"
+    <a href="https://genialabile.com/contacts"
     aria-label="Contact & Social" title="Contact & Social">
     CONTACT</a>
     |
-    <a href="https://genialabile.com/terms-and-conditions" class="imp-p"
+    <a href="https://genialabile.com/terms-and-conditions"
     aria-label="Terms & Conditions" title="Terms & Conditions">
     TERMS</a>
     |
-    <a href="https://genialabile.com/privacy-policy" class="imp-p"
+    <a href="https://genialabile.com/privacy-policy"
     aria-label="Privacy Policy" title="Privacy Policy">
     PRIVACY</a>
     |
-    <a href="https://genialabile.com/cookie-policy" class="imp-p"
+    <a href="https://genialabile.com/cookie-policy"
     aria-label="Cookie Policy" title="Cookie Policy">
     COOKIE</a>
     |
-    <a href="https://genialabile.com/accessibility" class="imp-p"
+    <a href="https://genialabile.com/accessibility"
     aria-label="Accessibility" title="Accessibility">
     ACCESS</a>
     <!--
