Aggiunti spazi vuoti tra le sezioni in accessibility.html per migliorare la leggibilità del contenuto.

--- a/accessibility.html
+++ b/accessibility.html
@@ -63,8 +63,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </p>
                 </section>
 
-                <section></section>
-
+                <section><br></section>
+                
                 <section>
                     <h2>🔬 Features</h2>
                     <hr class="thin-line">
@@ -86,7 +86,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </ul>
                 </section>
 
-                <section></section>
+                <section><br></section>
 
                 <section>
                     <h2>🚜 Limitations</h2>
@@ -97,6 +97,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </p>
                 </section>
 
+                <section><br></section>
+
                 <section>
                     <h2>🎙️ Improvements</h2>
                     <hr class="thin-line">
@@ -105,6 +107,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Your feedback is invaluable to us. If you have suggestions or notice issues, feel free to contact us.
                     </p>
                 </section>
+                
+                <section><br></section>
 
                 <section>
                     <h2>📮 Assistance</h2>
