Corretto un errore di sintassi in cli.html: chiuso il tag hr per garantire una corretta visualizzazione.

--- a/cli.html
+++ b/cli.html
@@ -160,7 +160,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             📟 Initializing
                         </h2>
                         <p>
-                            <hr class="sr-divider
+                            <hr class="sr-divider">
                     <div class="sr-only">
                         <hr class="sr-divider"> 
                         <i>
