Nessuna modifica apportata

--- a/accessibility.html
+++ b/accessibility.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: genialabile.com
 # Website: Minimal welcome website
 ===============================================================================
 
@@ -64,7 +64,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </section>
 
                 <section><br></section>
-                
+
                 <section>
                     <h2>🔬 Features</h2>
                     <hr class="thin-line">
