Aggiornato indirizzo email per l'accesso alla preview in contacts.html e migliorata la formulazione dei link per una maggiore chiarezza.

--- a/contacts.html
+++ b/contacts.html
@@ -61,7 +61,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Continuing to evolve and improve our Gen-ia Operative Framework and knowledge is our primary goal.
                         The applications extend across various fields, from creative writing, art, and philosophy to complex business models and strategic marketing.
                         <br><br>
-                        <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!" aria-label="Join Genialabile Beta Access">Join</a>
+                        <a href="mailto:info@genialabile.com?subject=Preview%20Access&body=Hello!" aria-label="Join Genialabile Preview Access">Join</a>
                         our preview access for beta testers or early adopters to explore the efficiency of our Models.
                         It is a pleasure to have you here, as explorers of the future we are building together.
                     </p>
@@ -73,14 +73,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <h2>🌐 Website</h2>
                     <hr class="thin-line">
                     <p>
-                        Live CLI: https:// 
+                        Live CLI at https:// 
                         <a href="https://genialabile.com/cli"
                         aria-label="Visit Genialabile Live CLI Presentation">
                         genialabile.com/cli</a>
                         <a href="https://genialabile.com/gpt" id="typing-effect::after" style="color: #00ff00cc; font-size: 0.6rem"
                         aria-label="Visit Genialabile Live Homepage">█</a>
-                        <br><br>
-                        Home Page : https:// 
+                    </p>
+                    <p>
+                        Home at https:// 
                         <a href="https://genialabile.com/"
                         aria-label="Visit Genialabile Static Homepage">
                         genialabile.com</a>
@@ -121,13 +122,16 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <p>
                         Twitter—X.com/<a href="https://x.com/genialabile/"
                         aria-label="Visit Genialabile on Twitter">genialabile</a>
-                        <br><br>
+                    </p>
+                    <p>
                         YouTube.com/<a href="https://youtube.com/@genialabile/"
                         aria-label="Visit Genialabile on YouTube">@genialabile</a>
-                        <br><br>
+                    </p>
+                    <p>
                         Instagram.com/<a href="https://instagram.com/genialabile/"
                         aria-label="Visit Genialabile on Instagram">genialabile</a>
-                        <br><br>
+                    </p>
+                    <p>
                         Threads.net/<a href="https://threads.net/@genialabile/"
                         aria-label="Visit Genialabile on Threads">@genialabile</a>
                     </p>
@@ -142,16 +146,20 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Develop & Designed by
                         <a href="https://x.com/seiseisette/"
                         aria-label="Visit seiseisette on X (Twitter)">seiseisette</a>.
-                        <br><br>
-                        Website & Repository Hosted by GitHub:
+                    </p> 
+                    <p>   
+                        Website & Repository Hosted by
                         <a href="https://github.com/seiseisette/genialabile.com/"
-                        aria-label="Visit Genialabile website repository on">GitHub</a>.
-                        <br><br>
+                        aria-label="Visit Genialabile website repository on GitHub">GitHub</a>.
+                    </p> 
+                    <p>   
                         Genialabile is evolving and running on ChatGPT.
                         <br>
                         Powered by <a href="https://openai.com/"
                         aria-label="Visit OpenAI website">OpenAI</a>.
-                        <br><br>
+                       
+                    </p>
+                    <p>
                         Concept & Gen-IA OFM Designed by seiseisette.
                         <br>
                         <b>©</b> 2025 Genialabile. All Rights Reserved.
