--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <!-- Spacer Divider -->
             <div class="divider-with-padding"></div>
 
-            <div id="imp-links"></div>
+            <div id="imp-links">
                 <section>
                     <h2>🎗️ Contact</h2>
                     <hr class="thin-line">
