--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         aria-label="Visit Genialabile Static Homepage">genialabile.com</a>
                     </p>
                     <p>
-                        CLI Animation at https://<a href="https://genialabile.com/cli"
+                        Live CLI at https://<a href="https://genialabile.com/cli"
                         aria-label="Visit Genialabile Live CLI Presentation">genialabile.com/cli</a>
                     </p>
                 </section>
