Ristrutturato il contenuto in contact.html e index.html per migliorare la gerarchia dei titoli e la chiarezza, aggiornato il link di contatto nel footer.html.

--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </section>
             
                 <section><br></section>
+
+
                 <!--
                 <section>
                     <h2>🎗️ Welcome</h2>
@@ -91,9 +93,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         It is a pleasure to have you here, as explorers of the future we are building together.
                     </p>
                 </section>
-            
                 <section><br></section>
                 -->
+
+                 <!-- Content Section -->
                 <section>
                     <h3>🌐 Website</h3>
                     <hr class="thin-line">
