--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
     CLI</a>
     |
-    <a href="https://genialabile.com/contacts"
+    <a href="https://genialabile.com/contact"
     aria-label="Contact & Social" title="Contact & Social">
     CONTACT</a>
     |
