--- a/index.html
+++ b/index.html
@@ -59,10 +59,30 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <!-- Spacer Divider -->
             <div class="divider-with-padding"></div>
 
+            <section>
+                <h2>🎗️ Welcome</h2>
+                <hr class="thin-line">
+                    <p>
+                        Get ready to explore the key features of Genialabile,
+                        the top AI solution designed for your growth and creativity.
+                    </p>
+                    <p id="imp-links">    
+                        No time to read it all? Let me summarize it for you!
+                        <br>
+                        Turn on the
+                        <a href="https://genialabile.com/cli"
+                        aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
+                        Command Line Interface</a>
+                        and I’ll bring it to life. ✨
+                    </p>
+            </section>
+
+            <section><br></section>
+
             <!-- Content Section -->
             <div>
                 <section>
-                    <h2>💡 Inspire</h2>
+                    <h3>💡 Inspire</h3>
                     <hr class="thin-line">
                     <p>
                         Multidimensional solutions and unlocking creative potential.
@@ -77,7 +97,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🧠 Combine</h2>
+                    <h3>🧠 Combine</h3>
                     <hr class="thin-line">
                     <p>
                         Predictive intelligence, logic, and creativity to deliver tailored answers, analyses, and solutions.
@@ -91,7 +111,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🌱 Grow</h2>
+                    <h3>🌱 Grow</h3>
                     <hr class="thin-line">
                     <p>
                         As a pilot project with its first version, focusing on internal tests and selected beta testers.
@@ -105,7 +125,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🌍 Global</h2>
+                    <h3>🌍 Global</h3>
                     <hr class="thin-line">
                     <p>
                         Accessible online via platforms such as ChatGPT by OpenAI.
@@ -119,7 +139,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🚀 Revolutionary</h2>
+                    <h3>🚀 Revolutionary</h3>
                     <hr class="thin-line">
                     <p>
                         The artificial intelligence creativity, transforming it into a trusted-virtual mentor that doesn’t just provide answers but inspires, guides, and stimulates human creativity.
@@ -134,7 +154,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🤖 Hybrid</h2>
+                    <h3>🤖 Hybrid</h3>
                     <hr class="thin-line">
                     <p>
                         Advanced model, ensuring security, scalability learning-model, and accessibility.
@@ -149,7 +169,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🎻 Genius</h2>
+                    <h3>🎻 Genius</h3>
                     <hr class="thin-line">
                     <p>
                         It understands the user's mood with just a few words to be more human-aligned, it surprises the user and stands apart from standard personalized GPT models.
