Rimosso un commento non necessario in contact.html per migliorare la leggibilità del codice

--- a/accessibility.html
+++ b/accessibility.html
@@ -43,10 +43,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
     <body style="background-color: #000000; color: #000000;">
         <main>
-            <h1>
-                <a href="https://genialabile.com/accessibility"
-                aria-label="Visit Genialabile Accessibility Statement Page">
-                    ACCESSIBILITY</a>
+             <!-- Main title -->
+             <h1>
+                <a href="https://genialabile.com/"
+                aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
+                GENiALABILE</a>
             </h1>
 
             <!-- Spacer Divider -->
@@ -67,7 +68,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🔬 Features</h2>
+                    <h3>🔬 Features</h3>
                     <hr class="thin-line">
                     <p>
                         We have implemented the following features to enhance accessibility:
@@ -90,7 +91,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🚜 Limitations</h2>
+                    <h3>🚜 Limitations</h3>
                     <hr class="thin-line">
                     <p>
                         We are working to ensure these services are accessible but cannot guarantee full compliance. 
@@ -101,7 +102,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>🎙️ Improvements</h2>
+                    <h3>🎙️ Improvements</h3>
                     <hr class="thin-line">
                     <p>
                         Genialabile continuously monitors accessibility standards and makes updates where necessary.
@@ -112,7 +113,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 <section><br></section>
 
                 <section>
-                    <h2>📮 Assistance</h2>
+                    <h3>📮 Assistance</h3>
                     <hr class="thin-line">
                     <p>
                         Email: 
