--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
                 GENiALABILE</a>
             </h1>
-
             <!-- Spacer Divider -->
             <div class="divider-with-padding"></div>
 
             <div id="imp-links">
                 <section>
-                    <h2>🎗️ Contact</h2>
+                    <h2>🎗️ Contact Us</h2>
                     <hr class="thin-line">
                     <p>
                         If you have any questions, feedback, or inquiries about Genialabile, feel free to reach out to us using the information below.
