--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <div class="divider-with-padding"></div>
 
             <section>
-                <h2>🎗️ Welcome</h2>
+                <h2>🎗️ Welcome Aboard</h2>
                 <hr class="thin-line">
                     <p>
                         Get ready to explore the key features of Genialabile,
