--- a/accessibility.html
+++ b/accessibility.html
@@ -39,8 +39,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 })
                 .catch(error => console.error('Error fetching header:', error));
         </script>
+        
     </head>
-
     <body style="background-color: #000000; color: #000000;">
         <main>
              <!-- Main title -->
@@ -49,13 +49,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
                 GENiALABILE</a>
             </h1>
-
             <!-- Spacer Divider -->
             <div class="divider-with-padding"></div>
 
             <div id="imp-links">
                 <section>
-                    <h2>🎗️ Welcome</h2>
+                    <h2>🎗️ Accessibility Statement</h2>
                     <hr class="thin-line">
                     <p>
                         Genialabile is committed to providing a website that is accessible to all users, including individuals with disabilities. 
