Rimosso emoji dai titoli in accessibility.html, contact.html e index.html per maggiore chiarezza; aggiornato il titolo del link nel footer.html.

--- a/accessibility.html
+++ b/accessibility.html
@@ -54,7 +54,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <div id="imp-links">
                 <section>
-                    <h2>🎗️ Accessibility Statement</h2>
+                    <h2>Accessibility Statement</h2>
                     <hr class="thin-line">
                     <p>
                         Genialabile is committed to providing a website that is accessible to all users, including individuals with disabilities. 
@@ -133,11 +133,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
                 </section>
             </div>
 
+            <section><br></section>
+
+            <section>
             <p class="txt-mini">
-                * * *
-                <br>
-                Last Updated: 20 January 2025
+                <b>#</b> Last Updated: 20 January 2025
             </p>
+            </section>
         </main>
 
         <!-- Preloader -->
