--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
             <div id="imp-links">
                 <section>
-                    <h2>🎗️ Contact Us</h2>
+                    <h2>Contact Us</h2>
                     <hr class="thin-line">
                     <p>
                         If you have any questions, feedback, or inquiries about Genialabile, feel free to reach out to us using the information below.
@@ -70,7 +70,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         It is a pleasure to have you here, as explorers of the future we are building together.
                     </p>
                 </section>
-            
                 <section><br></section>
 
                 <!--
