--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <div class="divider-with-padding"></div>
 
             <section>
-                <h2>🎗️ Welcome Aboard</h2>
+                <h2>Welcome Aboard</h2>
                 <hr class="thin-line">
                     <p>
                         Get ready to explore the key features of Genialabile,
@@ -76,7 +76,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         and I’ll bring it to life. ✨
                     </p>
             </section>
-
             <section><br></section>
 
             <!-- Content Section -->
