--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     |
     -->
     <a href="https://genialabile.com/"
-    aria-label="Genialabile Home Page" title="Genialabile Home Page">
+    aria-label="Genialabile Home Pitch" title="Genialabile Home Pitch">
     HP</a>
     |
     <a href="https://genialabile.com/cli"
