--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <div class="divider-with-padding"></div>
 
             <section>
-                <h2>Welcome Aboard</h2>
+                <h2>Home Pitch</h2>
                 <hr class="thin-line">
                     <p>
                         Get ready to explore the key features of Genialabile,
                         the top AI solution designed for your growth and creativity.
                     </p>
                     <p id="imp-links">    
-                        No time to read it all? Let me summarize it for you!
-                        <br>
+                        No time to read it all?<br>
+                        Let me summarize it for you!
                         Turn on the
                         <a href="https://genialabile.com/cli"
                         aria-label="Genialabile Live CLI Presentation" title="Genialabile Live CLI Presentation">
