--- a/contact.html
+++ b/contact.html
@@ -61,13 +61,12 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <br>
                         We are always looking for new ways to improve our mission and would love to hear about your experience.
                         Continuing to evolve and improve our Gen-ia Operative Framework and knowledge is our primary goal.
-                        <br>
-                        The applications span diverse fields, ranging from creative writing, art, and philosophy to complex business models and strategic marketing.
                     </p>
                     <p>
                         <a href="mailto:info@genialabile.com?subject=Preview%20Access&body=Hello!" aria-label="Join Genialabile Preview Access">Join</a>
                         our preview access for beta testers or early adopters to explore the efficiency of our Models.
-                        It is a pleasure to have you here, as explorers of the future we are building together.
+                        It is a pleasure to have you here, as explorers of the future we are building together.<br>
+                        The applications span diverse fields, ranging from creative writing, art, and philosophy to complex business models and strategic marketing.
                     </p>
                 </section>
                 <section><br></section>
